modify folder structure

--- a/scripts/get_data.ipynb
+++ b/scripts/get_data.ipynb
@@ -358,25 +358,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save output to file"
+    "### Save output to csv in data folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the dataframe to csv\n",
+    "current_directory = os.getcwd()\n",
+    "parent_directory = os.path.dirname(current_directory)\n",
+    "data_directory = os.path.join(parent_directory, 'data')\n",
+    "if not os.path.exists(data_directory):\n",
+    "    os.makedirs(data_directory)\n",
     "\n",
-    "# create a folder for the data\n",
-    "if not os.path.exists('data'):\n",
-    "    os.makedirs('data')\n",
     "\n",
-    "# save the dataframes to csv\n",
-    "posts.to_csv('data/posts.csv', index=False)\n",
-    "comments.to_csv('data/comments.csv', index=False)\n"
+    "posts.to_csv(os.path.join(data_directory, 'posts.csv'), index=False)\n",
+    "comments.to_csv(os.path.join(data_directory, 'comments.csv'), index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
